--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.10",
     "@ngrx/store": "^14.3.2",
     "bootstrap": "^3.4.1",
+    "ngx-custom-comps": "file:../ramm/dist/ngx-custom-comps",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
